# Samaj

./: .env.example  .gitignore  .pre-commit-config.yaml  ANTI_HALLUCINATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FREEZE_CHECKLIST.md  LICENSE  PROJECT_MEMORY.md  README.md  ROADMAP.md  SECURITY_SCOPE.md  THREAT_MODEL.md  TOOL_CATALOG_DISCLAIMER.md  pyproject.toml  requirements-dev.txt  requirements.txt  start.bat  start.sh  stop.bat  stop.sh
docs/: data-retention-and-cleanup.md  index.md  installation.md  kali-install.md  modules.md  os-support.md  plugin_development.md  proxy-module.md  reporting.md  safe-analysis-lab.md  safety.md  theme-and-branding.md  tool-catalog.md  tool-disclaimer.md  tool_catalog_roadmap.md  usage.md  windows-install.md
examples/: demo_project.json  sample_report.md  sample_scope.json
samaj/: __init__.py  __main__.py  app.py  cli.py  main.py
samaj/ai/: __init__.py  finding_assistant.py  local_ollama.py  openai_compatible.py  prompt_guard.py  provider_base.py  report_assistant.py
samaj/config/: defaults.py  safety_policy.py  settings.py
samaj/core/: __init__.py  anti_hallucination.py  audit.py  command_runner.py  environment.py  evidence.py  exceptions.py  os_detect.py  permissions.py  platform_paths.py  rate_limiter.py  safety.py  scope.py  task_queue.py  tool_compatibility.py
samaj/db/: __init__.py  crud.py  database.py  models.py  seed.py
samaj/gui/: __init__.py  about_view.py  asset_inventory.py  dashboard.py  evidence_viewer.py  logs_view.py  main_window.py  osint_view.py  placeholder.py  project_manager.py  proxy_manager_view.py  recon_view.py  report_builder.py  safe_lab_view.py  scope_manager.py  settings_view.py  testing_workbench.py  theme.py  tool_catalog_view.py
samaj/lab/: __init__.py  behavior_diagram.py  containment.py  lab_policy.py  safe_analysis_lab.py  signature_analyzer.py  static_analyzer.py  (+1 more)
(+52 files in other folders)
