[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "samaj"
version = "0.1.0"
description = "Safety-first Python GUI platform for authorized security testing workflows."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Samaj contributors" }]
keywords = ["security", "bug-bounty", "red-team", "osint", "reporting", "pyside6"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7",
  "typer>=0.12",
  "rich>=13.7",
  "httpx>=0.27",
  "aiohttp>=3.9",
  "dnspython>=2.6",
  "cryptography>=42.0",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "Jinja2>=3.1",
  "Markdown>=3.6",
  "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "mypy>=1.10",
  "pre-commit>=3.7",
  "mkdocs>=1.6",
]

[project.scripts]
samaj = "samaj.cli:app"

[tool.setuptools.packages.find]
include = ["samaj*"]

[tool.setuptools.package-data]
"samaj.tools" = ["catalog_manifest.json"]
"samaj.gui" = ["assets/*.png", "assets/icons/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
packages = ["samaj"]
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
